--- a/rpi/logging.ini
+++ b/rpi/logging.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 level=INFO
 formatter=formatter
 class=logging.handlers.RotatingFileHandler
-args=("/var/log/meteoriitti.log", "a", 1048576, 10, "utf-8")
+args=("/var/log/asteroid.log", "a", 1048576, 10, "utf-8")
 
 [formatter_formatter]
 format=%(asctime)-15s %(levelname)-8s %(name)s %(message)s
