--- a/rpi/logging.ini
+++ b/rpi/logging.ini
@@ -2,26 +2,20 @@
 keys=root
 
 [handlers]
-keys=console,errorfile
+keys=console
 
 [formatters]
 keys=formatter
 
 [logger_root]
 level=DEBUG
-handlers=console,errorfile
+handlers=console
 
 [handler_console]
 level=DEBUG
 formatter=formatter
 class=StreamHandler
 args=(sys.stdout,)
-
-[handler_errorfile]
-level=INFO
-formatter=formatter
-class=logging.handlers.RotatingFileHandler
-args=("/var/log/asteroid.log", "a", 1048576, 10, "utf-8")
 
 [formatter_formatter]
 format=%(asctime)-15s %(levelname)-8s %(name)s %(message)s
